# slate_runner

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: slate_runner.yml
_src/: __init__.py  __main__.py  config.py
_src/api/: __init__.py  service.py  system.py
_src/api/routes_v1/: __init__.py  assets.py  events.py  projects.py  publishes.py  shots.py  tasks.py
_src/api/services/: asset_service.py  project_service.py  render_service.py  shot_service.py  task_service.py
_src/db/: db.py
_src/models/: models.py  schemas.py
_src/utils/: utils.py
sql/: 001_schema.sql  002_api_keys.sql  schema.sql  seed.sql
src/: __init__.py  __main__.py  config.py  exceptions.py  health.py  logging_config.py  main.py  middleware.py  slate.py
src/api/: __init__.py  routes.py  service.py  system.py
src/api/controllers/: asset_controller.py  event_controller.py  project_controller.py  publish_controller.py  (+4 more)
src/app/: __init__.py  config.py  logging_config.py  middleware.py
src/db/: __init__.py  db.py  db_conn.py  db_seed.py
src/enums/: enums.py
src/models/: api_keys.py  asset.py  event.py  models.py  project.py  publish.py  render.py  schemas.py  shot.py  task.py  version.py
src/schemas/: asset.py  event.py  pagination.py  project.py  publish.py  render.py  response.py  shot.py  task.py  version.py
src/templates/: index.html
src/utils/: __init__.py  database.py  datetime_helpers.py  uid.py  utils.py  validation.py
works/sql/: 001_schema.sql  002_api_keys.sql  099_seed.sql  schema.sql  seed.sql
(+34 files in other folders)
